--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "next": "^14.1.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "bcryptjs": "^3.0.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3",
+    "next": "14.1.0",
+    "next-auth": "^4.24.11",
+    "react": "^18",
+    "react-dom": "^18",
     "tesseract.js": "^6.0.0"
   },
   "devDependencies": {
