--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
-    "next": "14.1.0",
+    "next": "^14.2.28",
     "next-auth": "^4.24.11",
     "react": "^18",
     "react-dom": "^18",
