--- a/package.json
+++ b/package.json
@@ -10,19 +10,27 @@
     "start:prod": "NODE_ENV=production next start",
     "lint": "next lint",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "migrate:cyber-resources": "node -r dotenv/config scripts/migrate-cyber-resources.js",
+    "verify-env": "node scripts/verify-env.js"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.4.9",
+    "dotenv": "^16.3.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "next": "^14.2.28",
     "next-auth": "^4.24.11",
     "react": "^18",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.5.2",
+    "react-markdown": "^10.1.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "swr": "^2.3.3",
     "tesseract.js": "^6.0.0"
   },
   "devDependencies": {
