Initial commit date 14May_2

--- a/package.json
+++ b/package.json
@@ -12,24 +12,28 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "migrate:cyber-resources": "node -r dotenv/config scripts/migrate-cyber-resources.js",
-    "verify-env": "node scripts/verify-env.js"
+    "verify-env": "node scripts/verify-env.js",
+    "check-env": "node scripts/check-env-files.js"
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "bcryptjs": "^3.0.2",
     "chart.js": "^4.4.9",
     "dotenv": "^16.3.1",
+    "highlight.js": "^11.11.1",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "next": "^14.2.28",
     "next-auth": "^4.24.11",
+    "prismjs": "^1.30.0",
     "react": "^18",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
     "react-hot-toast": "^2.5.2",
     "react-markdown": "^10.1.0",
-    "react-syntax-highlighter": "^15.6.1",
+    "react-syntax-highlighter": "^15.5.0",
+    "refractor": "^5.0.0",
     "swr": "^2.3.3",
     "tesseract.js": "^6.0.0"
   },
